don't strip on windows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -333,28 +333,8 @@ jobs:
       - name: Remove previous build.
         shell: bash
         run: |
-          rm -rf output
-
-      - name: Checkout source
-        uses: actions/checkout@v2
-        with:
-          submodules: recursive
-          ssh-key: ${{ secrets.SSH_KEY }}
-          ssh-strict: false
-
-      - uses: webfactory/ssh-agent@v0.5.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_KEY }}
-
-      - name: Run ssh-keyscan
-        run: ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-      - name: Setup SSH for Windows Git LFS
-        run: |
-          & "C:\\Program Files\\Git\\bin\\sh.exe" -c "ssh-keyscan github.com >> ~/.ssh/known_hosts"
-          & "C:\\Program Files\\Git\\bin\\sh.exe" -c "echo '${{ secrets.SSH_KEY }}' >> ~/.ssh/id_rsa"
-
-        if: matrix.os == 'windows-2019'
+          rm -rf console
+          rm -rf bench
 
       - uses: actions/download-artifact@v2
         with:
