TabBar and TabButton orange styling
* This achieves 90% of the new orange styling guidelines for TabBars and
  TabButtons used in the console.
* Current problems exist in the sidebar outlining. This isn't quite
  right, and I think the outline should not be drawn in the style
  control in this case, and instead drawn by the code using it.

cherry-pick notes: Significant changes from the version of this commit
in the old keithel-qt/orange-styling.

--- a/resources/qtquickcontrols2.conf
+++ b/resources/qtquickcontrols2.conf
@@ -4,8 +4,8 @@ FallbackStyle=Material
 
 [Material]
 Variant=Dense
+Accent="#FF8300"
 # Theme=Light
-# Accent=<Color like Teal>
 # Primary=<Color like BlueGrey>
 
 [Default]
