TabBar and TabButton orange styling
* This achieves 90% of the new orange styling guidelines for TabBars and
  TabButtons used in the console.
* Current problems exist in the sidebar outlining. This isn't quite
  right, and I think the outline should not be drawn in the style
  control in this case, and instead drawn by the code using it.

--- a/resources/qtquickcontrols2.conf
+++ b/resources/qtquickcontrols2.conf
@@ -2,7 +2,7 @@
 Style=SwiftNav
 FallbackStyle=Material
 
-# [Material]
+[Material]
 # Theme=Light
-# Accent=Teal
+Accent="#FF8300"
 # Primary=BlueGrey
