--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ target
 *.dist
 main.app/
 *.dmg
+*.tar.xz
+*.tar
 .DS_Store
-src/main/python/console_resources.py
+swiftnav_console/console_resources.py
+*.*~
+py39-dist/
+py39/
+dist/
 console_backend/tests/fileout.json
+get-pip.py
