Add CLI for Specifying Window Size [CPP-197]
Adds --width & --height to CLI for specifying main window
dimensions.

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -145,7 +145,7 @@ Get-ChildItem .\console_backend -Recurse -Include @("*.egg-info", "*.dist-info")
 
 [tasks.start-console]
 command = "${PYTHON}"
-args = ["-m", "swiftnav_console.main", "--", "${@}"]
+args = ["-m", "swiftnav_console.main", "${@}"]
 
 [tasks.qml-run]
 dependencies = ["generate-resources"]
